# rust-i3status

./: .gitignore  Cargo.toml  Makefile
src/: block.rs  fact.rs  main.rs  render.rs  string.rs  threads.rs  util.rs
src/providers/: battery.rs  brightness.rs  clock.rs  mod.rs  network.rs
