[package]
name = "custom-i3status"
version = "0.1.0"
authors = ["Stefan Majewsky <majewsky@gmx.net>"]

[dependencies]
# for the clock provider
chrono = "0.4"
# for the network provider
ipnetwork = "0.12.7"
pnet = "0.20.0"
# for the application core
libc = "0.2.34"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
